Revert "Commented out the dead Gna! links."
This reverts commit 9c9d335c14d3378763ffd7b77d7242a5b9b0d1a4.

--- a/links.html
+++ b/links.html
@@ -30,7 +30,7 @@
     <ul>
     <li><a href="links.html#relax_infrastructure">relax infrastructure</a>
      <ul>
-      <!--<li><a href="links.html#Gna">Gna!</a></li>-->
+      <li><a href="links.html#Gna">Gna!</a></li>
       <li><a href="links.html#SourceForge">SourceForge</a></li>
       <li><a href="links.html#GitLab">GitLab</a></li>
       <li><a href="links.html#GitHub">GitHub</a></li>
@@ -81,13 +81,11 @@
       <td><strong>Links</strong></td>
     </tr>
 
-    <!--
     <tr id="Gna" class="link_tr">
       <td class="link_logo_td"><a href="http://gna.org/projects/relax"><img src="images/gnalogo.png" alt="Gna! logo" class="image"/></a></td>
       <td>Gna! is a central point for the development, distribution and maintenance of Libre Software (Free Software) projects.</td>
       <td>The relax project page is <a href="https://gna.org/projects/relax">https://gna.org/projects/relax</a>.  The relax developer Gna! pages are (in alphabetical order):  <a href="http://gna.org/users/bugman">Edward d&#39;Auvergne</a>, <a href="http://gna.org/users/michaelbieri">Michael Bieri</a>, <a href="http://gna.org/users/macraild">Chris MacRaild</a>, <a href="http://gna.org/users/semor">S&#233;bastien Morin</a>, <a href="http://gna.org/users/pansapiens">Andrew Perry</a>, <a href="http://gna.org/users/han87">Han Sun</a>, <a href="http://gna.org/users/varioustoxins">Gary Thompson</a>.</td>
     </tr>
-    -->
 
     <tr id="SourceForge" class="link_tr">
       <td class="link_logo_td"><a href="https://sourceforge.net/projects/nmr-relax"><img src="images/sf_logo.png" alt="SourceForege logo" class="image"/></a></td>
