Converted all of the Internet Archive links for the old Gna! mailing list archives.
These now point to http://www.nmr-relax.com/mail.gna.org/.

--- a/communication.html
+++ b/communication.html
@@ -57,7 +57,7 @@
      <p>The relax announcement list, relax-announce at gna.org, is reserved for important announcements about the program including the release of new program versions. The amount of traffic on this list is relatively low. If you would like to receive information about relax you can subscribe to the list by vising the <a href="https://mail.gna.org/listinfo/relax-announce/">relax-announce information page</a>.  The announcements can be browsed in one of the official relax mailing list archives:</p>
      <ul class="main_ul">
       <li>
-       <a href="https://mail.gna.org/public/relax-announce/">Local archives</a>
+       <a href="http://www.nmr-relax.com/mail.gna.org/public/relax-announce/">Local archives</a>
       </li>
       <li>
        <a href="http://www.mail-archive.com/relax-announce@gna.org/">The Mail Archive</a>
@@ -76,7 +76,7 @@
       <p>If you would like to ask questions about relax, discuss certain features, receive help, or to communicate on any other subject related to relax, the mailing list <a href="mailto:relax-users at gna.org">relax-users at gna.org</a> is the place to post your message.  To subscribe to the list, go to the <a href="https://mail.gna.org/listinfo/relax-users/">relax-users information page</a>.  The messages can be browsed in one of the official relax mailing list archives:</p>
      <ul class="main_ul">
       <li>
-       <a href="https://mail.gna.org/public/relax-users/">Local archives</a>
+       <a href="http://www.nmr-relax.com/mail.gna.org/public/relax-users/">Local archives</a>
       </li>
       <li>
        <a href="http://www.mail-archive.com/relax-users@gna.org/">The Mail Archive</a>
@@ -95,7 +95,7 @@
       <p>Another mailing list exists for posts relating to the development of relax.  The list is <a href="mailto:relax-devel at gna.org">relax-devel at gna.org</a> and to subscribe, go to the <a href="https://mail.gna.org/listinfo/relax-devel/">relax-devel information page</a>.  Feature requests, program design, or any other posts relating to relax's structure or code should be sent to this list instead.  The messages can be browsed in one of the official relax mailing list archives:</p>
      <ul class="main_ul">
       <li>
-       <a href="https://mail.gna.org/public/relax-devel/">Local archives</a>
+       <a href="http://www.nmr-relax.com/mail.gna.org/public/relax-devel/">Local archives</a>
       </li>
       <li>
        <a href="http://www.mail-archive.com/relax-devel@gna.org/">The Mail Archive</a>
@@ -114,7 +114,7 @@
       <p>One last mailing list is the relax commits list.  This list is reserved for automatically generated posts created by the version control software which looks after the relax source code and these web pages.  If you would like to become a developer, you can subscribe to the list at <a href="https://mail.gna.org/listinfo/relax-commits/">relax-commits information page</a>.  The messages can be browsed in one of the official relax mailing list archives:</p>
      <ul class="main_ul">
       <li>
-       <a href="https://mail.gna.org/public/relax-commits/">Local archives</a>
+       <a href="http://www.nmr-relax.com/mail.gna.org/public/relax-commits/">Local archives</a>
       </li>
       <li>
        <a href="http://www.mail-archive.com/relax-commits@gna.org/">The Mail Archive</a>
@@ -153,10 +153,10 @@
           <input type="hidden" name="domains" value="http://www.nmr-relax.com"/>
             <br />
             <input type="radio" name="sitesearch" value=""/> WWW
-            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-announce"/> relax-announce
-            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-users" checked="checked"/> relax-users
-            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-devel"/> relax-devel
-            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-commits"/> relax-commits
+            <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/mail.gna.org/public/relax-announce"/> relax-announce (Gna! archive)
+            <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/mail.gna.org/public/relax-users" checked="checked"/> relax-users (Gna! archive)
+            <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/mail.gna.org/public/relax-devel"/> relax-devel (Gna! archive)
+            <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/mail.gna.org/public/relax-commits"/> relax-commits (Gna! archive)
         </td>
       </tr>
       </table>
