--- a/manual/Closing_an_issue.html
+++ b/manual/Closing_an_issue.html
@@ -92,7 +92,7 @@ where the closing comment was:
 
 <P>
 <SMALL CLASS="FOOTNOTESIZE"><TT>This documentation bug was fixed in r2641. The commit message is located at <A NAME="tex2html630"
-  HREF="https://web.archive.org/web/https://mail.gna.org/public/relax-commits/2006-10/msg00073.html">https://web.archive.org/web/https://mail.gna.org/public/relax-commits/2006-10/msg00073.html</A>
+  HREF="http://www.nmr-relax.com/mail.gna.org/public/relax-commits/2006-10/msg00073.html">http://www.nmr-relax.com/mail.gna.org/public/relax-commits/2006-10/msg00073.html</A>
 (Message-id: &lt;E1GYG4l-0002kK-Jx@subversion.gna.org&gt;).</TT></SMALL>
 <P>
 
