--- a/manual/Further_details.html
+++ b/manual/Further_details.html
@@ -83,7 +83,7 @@ Further details</A>
 
 <P>
 For a full description of the multi-processor framework and how to use it, please see Gary Thompson's official announcement on the <A NAME="tex2html85"
-  HREF="https://web.archive.org/web/https://mail.gna.org/public/relax-devel/2007-05/msg00000.html">relax-devel mailing list</A>.
+  HREF="http://www.nmr-relax.com/mail.gna.org/public/relax-devel/2007-05/msg00000.html">relax-devel mailing list</A>.
 
 <P>
 <BR><HR>
