--- a/manual/Search_engine_indexing.html
+++ b/manual/Search_engine_indexing.html
@@ -96,7 +96,7 @@ This is one reason why relax can be found at a number of sites across the web:
 <DL>
 <DT><STRONG>Freecode:</STRONG></DT>
 <DD>New relax releases are announced not only on the <A NAME="tex2html636"
-  HREF="https://web.archive.org/web/https://mail.gna.org/public/relax-announce/">relax-announce</A>
+  HREF="http://www.nmr-relax.com/mail.gna.org/public/relax-announce/">relax-announce</A>
 mailing list and on the relax <A NAME="tex2html637"
   HREF="https://web.archive.org/web/https://gna.org/news/?group=relax">news</A>
 pages, but also on <A NAME="tex2html638"
