--- a/links.html
+++ b/links.html
@@ -226,7 +226,7 @@
     </tr>
     <tr id="PDC" class="link_tr">
       <td class="link_logo_td"><a href="http://www.bruker.com/products/mr/nmr/nmr-software/software.html"><img src="images/bruker_logo.png" alt="Bruker logo" class="image"/></a></td>
-      <td>The Bruker Dynamics Center for the processing of R<sub>1</sub>, R<sub>2</sub>, R<sub>1&#961;</sub>, and steady-state NOE data from Bruker NMR spectrometers, as well as other more advanced <a href="https://mail.gna.org/public/relax-users/2012-04/msg00011.html">analyses</a>.</td>
+      <td>The Bruker Dynamics Center for the processing of R<sub>1</sub>, R<sub>2</sub>, R<sub>1&#961;</sub>, and steady-state NOE data from Bruker NMR spectrometers, as well as other more advanced <a href="http://www.nmr-relax.com/mail.gna.org/public/relax-users/2012-04/msg00011.html">analyses</a>.</td>
     </tr>
   </tbody>
 </table>
