--- a/manual/Format_of_the_commit_logs.html
+++ b/manual/Format_of_the_commit_logs.html
@@ -107,7 +107,7 @@ If you are a relax developer and you have commit access to the repository the fo
     An example is bug #5559 which is located at <A NAME="tex2html557"
   HREF="https://web.archive.org/web/https://gna.org/bugs/?func=detailitem&amp;item_id=5559">https://web.archive.org/web/https://gna.org/bugs/?func=detailitem&amp;item_id=5559</A>
 and the post to ``relax-devel at gna.org''<A NAME="23213"></A> describing the fix to that bug which is located at <A NAME="tex2html559"
-  HREF="https://web.archive.org/web/https://mail.gna.org/public/relax-devel/2006-03/msg00013.html">https://web.archive.org/web/https://mail.gna.org/public/relax-devel/2006-03/msg00013.html</A>.
+  HREF="http://www.nmr-relax.com/mail.gna.org/public/relax-devel/2006-03/msg00013.html">http://www.nmr-relax.com/mail.gna.org/public/relax-devel/2006-03/msg00013.html</A>.
 </LI>
 <LI>A full description with all the details can follow.
 
@@ -125,11 +125,11 @@ An example of a commit message for the closure of a bug is:
 <P>
 <SMALL CLASS="FOOTNOTESIZE"><TT>Bug #7241 was thought to be fixed in in r2591 and r2593, the commit messages describing the solution
 being located at <A NAME="tex2html551"
-  HREF="https://web.archive.org/web/https://mail.gna.org/public/relax-commits/2006-09/msg00064.html">https://web.archive.org/web/https://mail.gna.org/public/relax-commits/2006-09/msg00064.html</A>
+  HREF="http://www.nmr-relax.com/mail.gna.org/public/relax-commits/2006-09/msg00064.html">http://www.nmr-relax.com/mail.gna.org/public/relax-commits/2006-09/msg00064.html</A>
 (Message-id:
 &lt;E1GTgBi-0000R6-4h@subversion.gna.org&gt;) for r2591 and
 <A NAME="tex2html552"
-  HREF="https://web.archive.org/web/https://mail.gna.org/public/relax-commits/2006-10/msg00001.html">https://web.archive.org/web/https://mail.gna.org/public/relax-commits/2006-10/msg00001.html</A>
+  HREF="http://www.nmr-relax.com/mail.gna.org/public/relax-commits/2006-10/msg00001.html">http://www.nmr-relax.com/mail.gna.org/public/relax-commits/2006-10/msg00001.html</A>
 (Message-id:
 &lt;E1GTt6C-0005rk-8q@subversion.gna.org&gt;) for r2593.
 </TT></SMALL>
