--- a/mail.gna.org/public/relax-users/2011-08/msg00000.html
+++ b/mail.gna.org/public/relax-users/2011-08/msg00000.html
@@ -357,7 +357,7 @@ deselected spins file are now assumed.  The residue number is assumed
 to be in the first column.  This is a hack until the spin selection
 part is better designed.
         * Fix for the bug reported as sr #2764
-(<a  rel="nofollow" href="https://gna.org/sr/?2764">https://gna.org/sr/?2764</a>).  The problem was that the sequence file is
+(<a  rel="nofollow" href="https://web.archive.org/web/https://gna.org/sr/?2764">https://gna.org/sr/?2764</a>).  The problem was that the sequence file is
 now in the variable sequence_file.
         * Fix for the sequence.read user function - the force flag is
 now being passed on.
