Fixes for the links to Art Palmer's Modelfree program.

--- a/features.html
+++ b/features.html
@@ -114,7 +114,7 @@ used as optimisation engines replacing the minimisation algorithms built into re
 
     <ul>
      <li><a href="http://www.nmr.ru/dasha.html">Dasha</a> (model-free analysis)</li>
-     <li><a href="http://cpmcnet.columbia.edu/dept/gsas/biochem/labs/palmer/">Modelfree</a> (model-free analysis)</li>
+     <li><a href="http://www.palmer.hs.columbia.edu/software/modelfree.html">Modelfree</a> (model-free analysis)</li>
     </ul>
   </div>
 
