Added a notice for the bug tracker and mailing lists currently being down due to the Gna! shutdown.
This is for http://www.nmr-relax.com/communication.html.

--- a/communication.html
+++ b/communication.html
@@ -41,6 +41,12 @@
     </ul>
   </div>
 
+  <div class="main_box">
+    <h1>Gna! shutdown - Temporary migration status</h1>
+
+    <p>Without much warning, the <a href="https://en.wikipedia.org/wiki/Gna!">Gna! open source infrastructure</a> that relax relied upon was permanently shut down at the start of 2017.  A migration of relax's infrastructure is in progress, however both the bug tracker and the mailing lists are currently missing.  These will hopefully soon be back in place.  The old mailing list archives should nevertheless be accessible.</p>
+  </div>
+
   <div id="bug_tracker" class="main_box">
     <h1>Bug Tracker</h1>
 
