Added some notes about the Gna! shutdown.
This is for http://www.nmr-relax.com/download.html, http://www.nmr-relax.com/faq.html, and
http://www.nmr-relax.com/windows_devel.html.  The information will be updated later once a full
migration has occurred.

--- a/download.html
+++ b/download.html
@@ -318,6 +318,8 @@
 <div id="Source_code_repository" class="main_box">
     <h1>Source code repository</h1>
 
+    <p><b>Note:  The information in this section is out of date due to the Gna! shutdown.  It will be updated once a full migration to new infrastructure has taken place.</b></p>
+
     <p>The most up-to-date code can be obtained from <a href="http://gna.org/svn/?group=relax" title="The relax subversion repository.">Source code repository</a> using one of the following commands (which involve the program <a href="http://subversion.tigris.org/">Subversion</a>):</p>
 
     <p><em>> svn co svn://svn.gna.org/svn/relax/trunk ./relax-trunk</em></p>
