--- a/faq.html
+++ b/faq.html
@@ -37,6 +37,7 @@
   <div class="main_box">
      <h3 id="source_code">How do I obtain the newest relax source code?</h3>
 
+      <p><b>Note:  The information in this section is out of date due to the Gna! shutdown.  It will be updated once a full migration to new infrastructure has taken place.</b></p>
       <p>To obtain the most up to date copy of the relax source code without waiting for a new release, the new code can be checked out from the repository by typing:</p>
       <p><em>$ svn co svn://svn.gna.org/svn/relax/trunk relax-trunk</em></p>
       <p>or if this doesn't work:</p>
@@ -47,6 +48,7 @@
 
      <h3 id="source_code_branch">How do I check out a relax source code branch?</h3>
 
+      <p><b>Note:  The information in this section is out of date due to the Gna! shutdown.  It will be updated once a full migration to new infrastructure has taken place.</b></p>
       <p>Sometimes code for a new analysis type or a new feature is developed within a dedicated branch within the <a href="http://svn.gna.org/viewcvs/relax/">relax repository</a>.  To obtain for example the incomplete relaxation dispersion relax branch, type:</p>
       <p><em>$ svn co svn://svn.gna.org/svn/relax/branches/relax_disp</em></p>
       <p>or:</p>
