--- a/windows_devel.html
+++ b/windows_devel.html
@@ -262,6 +262,8 @@
  <div id="svn" class="main_box">
    <h1>3. Subversion</h1>
 
+   <p><b>Note:  The information in this section is out of date due to the Gna! shutdown.  It will be updated once a full migration to new infrastructure has taken place.</b></p>
+
    <div id="svn_why" class="main_h2">
     <h2>3.1 Why install?</h2>
      <p>The relax source code is kept within the relax Subversion <a href="http://gna.org/svn/?group=relax">repository</a>.  After installing <a href="http://subversion.apache.org/">Subversion</a>, you are then able to check out code directly from the repository.  For example to check out the code from the relax trunk, one can type:</p>
