Fixes for the events links by using Internet Archive snapshot links.
This is for http://www.nmr-relax.com/events.html.

--- a/events.html
+++ b/events.html
@@ -56,7 +56,7 @@
     <table class="conf-table">
       <tbody>
         <tr>
-          <td class="conf-table-icon"><a href="http://www.pasteur.fr/infosci/conf/sb/ICMRBS/"><img src="images/icmrbs2012/icmrbs2012.png" alt="ICMRBS 2012" class="image"/></a></td>
+          <td class="conf-table-icon"><img src="images/icmrbs2012/icmrbs2012.png" alt="ICMRBS 2012" class="image"/></td>
           <td>
             <table class="conf-subtable">
               <tbody>
@@ -97,7 +97,7 @@
     <table class="conf-table">
       <tbody>
         <tr>
-          <td class="conf-table-icon"><a href="http://www.enc-conference.org/"><img src="images/50thENC.jpg" alt="ENC 2009" class="image"/></a></td>
+          <td class="conf-table-icon"><a href="https://web.archive.org/web/20090707094851/http://www.enc-conference.org/"><img src="images/50thENC.jpg" alt="ENC 2009" class="image"/></a></td>
           <td>
             <table class="conf-subtable">
               <tbody>
@@ -119,7 +119,7 @@
     <table class="conf-table">
       <tbody>
         <tr>
-          <td class="conf-table-icon"><a href="http://www.icmrbs2006.org/"><img src="images/icmrbs2006/silouette_mini.png" alt="ICMRBS 2006" class="image"/></a></td>
+          <td class="conf-table-icon"><a href="https://web.archive.org/web/20070819173238/http://www.icmrbs2006.org/"><img src="images/icmrbs2006/silouette_mini.png" alt="ICMRBS 2006" class="image"/></a></td>
           <td>
             <table class="conf-subtable">
               <tbody>
@@ -140,7 +140,7 @@
     <table class="conf-table">
       <tbody>
         <tr>
-          <td class="conf-table-icon"><a href="http://www.anzmag.com.au/conferences.php"><img src="images/anzmag_2004/barossa_mini.png" alt="ANZMAG 2004" class="image"/></a></td>
+          <td class="conf-table-icon"><a href="https://web.archive.org/web/20040725143919/http://anzmag2004.com:80/"><img src="images/anzmag_2004/barossa_mini.png" alt="ANZMAG 2004" class="image"/></a></td>
           <td>
             <table class="conf-subtable">
               <tbody>
