Better Internet Archive snapshot for the ANZMAG 2004 conference.
I this snapshot, the links on the main page have been archived.

--- a/events.html
+++ b/events.html
@@ -140,7 +140,7 @@
     <table class="conf-table">
       <tbody>
         <tr>
-          <td class="conf-table-icon"><a href="https://web.archive.org/web/20040725143919/http://anzmag2004.com:80/"><img src="images/anzmag_2004/barossa_mini.png" alt="ANZMAG 2004" class="image"/></a></td>
+          <td class="conf-table-icon"><a href="https://web.archive.org/web/20040616085155/http://www.anzmag2004.com:80/"><img src="images/anzmag_2004/barossa_mini.png" alt="ANZMAG 2004" class="image"/></a></td>
           <td>
             <table class="conf-subtable">
               <tbody>
