Converted from external to local links for all SSI included HTML.
This is for SSL and https:// preparations, so that the http://www.nmr-relax.com part of the URL is
not present in the local links.

--- a/head.html
+++ b/head.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
   <!--relax css-->
-  <link rel="stylesheet" type="text/css" href="http://www.nmr-relax.com/relax.css"/>
+  <link rel="stylesheet" type="text/css" href="/relax.css"/>
 
   <!--Google analytics JS-->
   <script type="text/javascript">
