Converted from external to local links for all of the main http://www.nmr-relax.com pages.
This is for SSL and https:// preparations, so that the http://www.nmr-relax.com part of the URL is
not present in the local links.

--- a/events.html
+++ b/events.html
@@ -65,8 +65,8 @@
                 <tr><td class="conf-table-title">Location:</td><td>Lyon, France.</td></tr>
                 <tr><td class="conf-table-title">Title:</td><td>relax and its applications for the study of internal and domain motions in biomolecules.</td></tr>
                 <tr><td class="conf-table-title">Authors:</td><td>Edward d'Auvergne* and Christian Griesinger.</td></tr>
-                <tr><td class="conf-table-title">Abstract:</td><td><a href="http://www.nmr-relax.com/conferences/edward_abstract_ICMRBS_2012.pdf">PDF</a></td></tr>
-                <tr><td class="conf-table-title">Poster:</td><td><a href="http://www.nmr-relax.com/conferences/edward_poster_ICMRBS_2012.pdf">PDF</a></td></tr>
+                <tr><td class="conf-table-title">Abstract:</td><td><a href="conferences/edward_abstract_ICMRBS_2012.pdf">PDF</a></td></tr>
+                <tr><td class="conf-table-title">Poster:</td><td><a href="conferences/edward_poster_ICMRBS_2012.pdf">PDF</a></td></tr>
               </tbody>
             </table>
           </td>
@@ -86,7 +86,7 @@
                 <tr><td class="conf-table-title">Location:</td><td>Ottawa, ON, Canada.</td></tr>
                 <tr><td class="conf-table-title">Title:</td><td>A toolkit for dynamics relaxing the BMRB.</td></tr>
                 <tr><td class="conf-table-title">Authors:</td><td>Edward d'Auvergne, Chris MacRaild, S&eacute;bastien Morin*, Gary Thompson, Eldon Ulrich.</td></tr>
-                <tr><td class="conf-table-title">Poster:</td><td><a href="http://www.nmr-relax.com/conferences/poster__MOOT_2009_Ottawa_Canada.pdf">PDF</a></td></tr>
+                <tr><td class="conf-table-title">Poster:</td><td><a href="conferences/poster__MOOT_2009_Ottawa_Canada.pdf">PDF</a></td></tr>
               </tbody>
             </table>
           </td>
@@ -106,9 +106,9 @@
                 <tr><td class="conf-table-title">Location:</td><td>Asilomar, CA, USA.</td></tr>
                 <tr><td class="conf-table-title">Title:</td><td>A toolkit for dynamics and how to relax the BMRB.</td></tr>
                 <tr><td class="conf-table-title">Authors:</td><td>Edward d'Auvergne*, Chris MacRaild, S&eacute;bastien Morin, Gary Thompson, Eldon Ulrich.</td></tr>
-                <tr><td class="conf-table-title">Abstract:</td><td><a href="http://www.nmr-relax.com/conferences/edward_enc2009_abstract.pdf">PDF</a></td></tr>
-                <tr><td class="conf-table-title">Poster:</td><td><a href="http://www.nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA.pdf">PDF</a></td></tr>
-                <tr><td class="conf-table-title">Misc:</td><td><a href="http://www.nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA_files.tar.bz2">Poster files (figures, etc.)</a></td></tr>
+                <tr><td class="conf-table-title">Abstract:</td><td><a href="conferences/edward_enc2009_abstract.pdf">PDF</a></td></tr>
+                <tr><td class="conf-table-title">Poster:</td><td><a href="conferences/poster__ENC_2009_Asilomar_USA.pdf">PDF</a></td></tr>
+                <tr><td class="conf-table-title">Misc:</td><td><a href="conferences/poster__ENC_2009_Asilomar_USA_files.tar.bz2">Poster files (figures, etc.)</a></td></tr>
               </tbody>
             </table>
           </td>
@@ -128,8 +128,8 @@
                 <tr><td class="conf-table-title">Location:</td><td>Goettingen, Germany.</td></tr>
                 <tr><td class="conf-table-title">Title:</td><td>The program relax:  Improving optimisation and model-free analysis in reverse.</td></tr>
                 <tr><td class="conf-table-title">Authors:</td><td>Edward d'Auvergne* and Paul Gooley.</td></tr>
-                <tr><td class="conf-table-title">Abstract:</td><td><a href="http://www.nmr-relax.com/conferences/edward_abstract_ICMRBS_2006_Goettingen_Germany.txt">PDF</a></td></tr>
-                <tr><td class="conf-table-title">Poster:</td><td><a href="http://www.nmr-relax.com/conferences/edward_poster_ICMRBS_2006_Goettingen_Germany.pdf">PDF</a></td></tr>
+                <tr><td class="conf-table-title">Abstract:</td><td><a href="conferences/edward_abstract_ICMRBS_2006_Goettingen_Germany.txt">PDF</a></td></tr>
+                <tr><td class="conf-table-title">Poster:</td><td><a href="conferences/edward_poster_ICMRBS_2006_Goettingen_Germany.pdf">PDF</a></td></tr>
               </tbody>
             </table>
           </td>
@@ -149,8 +149,8 @@
                 <tr><td class="conf-table-title">Location:</td><td>Barossa Valley, Australia.</td></tr>
                 <tr><td class="conf-table-title">Title:</td><td>Improving the model-free analysis of protein dynamics.</td></tr>
                 <tr><td class="conf-table-title">Authors:</td><td>Edward d'Auvergne* and Paul Gooley.</td></tr>
-                <tr><td class="conf-table-title">Abstract:</td><td><a href="http://www.nmr-relax.com/conferences/edward_abstract_ANZMAG_2004.txt">PDF</a></td></tr>
-                <tr><td class="conf-table-title">Poster:</td><td><a href="http://www.nmr-relax.com/conferences/edward_poster_ANZMAG_2004.pdf">PDF</a></td></tr>
+                <tr><td class="conf-table-title">Abstract:</td><td><a href="conferences/edward_abstract_ANZMAG_2004.txt">PDF</a></td></tr>
+                <tr><td class="conf-table-title">Poster:</td><td><a href="conferences/edward_poster_ANZMAG_2004.pdf">PDF</a></td></tr>
               </tbody>
             </table>
           </td>
