--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <li>RSDM - Reduced Spectral Density Mapping.</li>
         <li>Frame order and N-state model - study of domain motions via the N-state model and frame order dynamics theories using anisotropic NMR parameters such as RDCs and PCSs.</li>
         <li>Stereochemistry investigations.</li>
-        <li><a href="http://www.nmr-relax.com/analyses/relaxation_dispersion.html">Relaxation dispersion</a>.</li>
+        <li><a href="analyses/relaxation_dispersion.html">Relaxation dispersion</a>.</li>
     </ul>
 
     <p>The full list of features is described <a href="features.html">here</a>.</p>
