--- a/qr.html
+++ b/qr.html
@@ -14,7 +14,7 @@
 
 <head>
   <title>QR Code redirection page</title>
-  <meta http-equiv="REFRESH" content="5; url=http://www.nmr-relax.com" />
+  <meta http-equiv="REFRESH" content="5; url=/" />
   <!--#include virtual="head.html" -->
 </head>
 
@@ -27,9 +27,9 @@
   <div class="main_box">
     <h1>QR Code redirection</h1>
 
-     <img src="images/qr_code.png" alt="QR Code for http://www.nmr-relax.com/qr.html"/>
+     <img src="images/qr_code.png" alt="QR Code for qr.html"/>
 
-     <p>Redirecting to <a href="http://www.nmr-relax.com">http://www.nmr-relax.com</a> in 5 seconds...</p>
+     <p>Redirecting to <a href="/">www.nmr-relax.com</a> in 5 seconds...</p>
 
   </div>
 
