--- a/docs.html
+++ b/docs.html
@@ -67,10 +67,10 @@
       <td style="font-size:80%">
         <input type="text" name="q" size="31" maxlength="255" value=""/>
         <input type="submit" name="btnG" value="Google Search"/>
-        <input type="hidden" name="domains" value="http://www.nmr-relax.com"/>
+        <input type="hidden" name="domains" value="/"/>
           <br />
           <input type="radio" name="sitesearch" value=""/> WWW
-          <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual" checked="checked"/> relax manual
+          <input type="radio" name="sitesearch" value="manual" checked="checked"/> relax manual
       </td>
     </tr>
     </table>
