--- a/download.html
+++ b/download.html
@@ -64,9 +64,9 @@
 
     <p>The current stable release is <a href="http://wiki.nmr-relax.com/Relax_4.0.3">relax version 4.0.3</a> <em>(28 October 2016)</em>.</p>
 
-      <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.7 but usually work with other Python versions.  If not, or if binaries for your system do not exist, please download the source release (note that the compilation of binary modules is not a prerequisite for using relax).  If the binary distribution file for your architecture does not correspond to the most up to date version of relax, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the <a href="http://www.nmr-relax.com/manual/Open_source_infrastructure.html">Open source infrastructure</a> chapter of the relax manual for details.</p>
+      <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.7 but usually work with other Python versions.  If not, or if binaries for your system do not exist, please download the source release (note that the compilation of binary modules is not a prerequisite for using relax).  If the binary distribution file for your architecture does not correspond to the most up to date version of relax, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the <a href="manual/Open_source_infrastructure.html">Open source infrastructure</a> chapter of the relax manual for details.</p>
 
-      <p>For details about the relax GPG signatures and their usage, see the Security section at the <a href="http://www.nmr-relax.com/download.html#Security">end of this page</a>.</p>
+      <p>For details about the relax GPG signatures and their usage, see the Security section at the <a href="download.html#Security">end of this page</a>.</p>
 
 <!-- Dependencies -->
     <div id="Dependencies" class="main_h2">
