--- a/search.html
+++ b/search.html
@@ -27,7 +27,7 @@
   <div class="main_box">
     <h1>Search</h1>
 
-    <p>Search the <a href="http://www.nmr-relax.com/">relax website</a>, <a href="http://wiki.nmr-relax.com/">relax wiki</a>, <a href="http://www.nmr-relax.com/manual/">relax manual</a>, <a href="http://www.nmr-relax.com/api/">relax API documentation</a> and the <a href="http://www.nmr-relax.com/communication.html">relax mailing list archives</a>:</p>
+    <p>Search the <a href="/">relax website</a>, <a href="http://wiki.nmr-relax.com/">relax wiki</a>, <a href="manual/">relax manual</a>, <a href="api/">relax API documentation</a> and the <a href="communication.html">relax mailing list archives</a>:</p>
 
       <!-- Google gadget -->
       <script type="text/javascript">
